IF( COMPILE_FOR_KDE4 )

# KDE4_CREATE_HANDBOOK( index.docbook INSTALL_DESTINATION ${HTML_INSTALL_DIR}/knfoviewer )

ELSE( COMPILE_FOR_KDE4 )

FIND_PACKAGE( docbook )

IF( DOCBOOK_FOUND )
    kde3_create_handbook( index.docbook INSTALL_DESTINATION ${KDE3PREFIX}/share/doc/HTML/en/knfoviewer )
ENDIF( DOCBOOK_FOUND )


ENDIF( COMPILE_FOR_KDE4 )
